[gd_scene load_steps=23 format=2]

[ext_resource path="res://Objects/Warps/sprites/teleportportal_4.png" type="Texture" id=1]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_3.png" type="Texture" id=2]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_2.png" type="Texture" id=3]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_1.png" type="Texture" id=4]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_5.png" type="Texture" id=5]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_5.png" type="Texture" id=6]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_4.png" type="Texture" id=7]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_6.png" type="Texture" id=8]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_0.png" type="Texture" id=9]
[ext_resource path="res://Objects/Warps/sprites/teleportmachine_0.png" type="Texture" id=10]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_9.png" type="Texture" id=11]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_3.png" type="Texture" id=12]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_8.png" type="Texture" id=13]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_7.png" type="Texture" id=14]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_2.png" type="Texture" id=15]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_6.png" type="Texture" id=16]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_7.png" type="Texture" id=17]
[ext_resource path="res://Objects/Warps/sprites/teleportportal_1.png" type="Texture" id=18]
[ext_resource path="res://Objects/Warps/sprites/teleporteffect_0.png" type="Texture" id=19]
[ext_resource path="res://Objects/Warps/obj_teleporter.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "teleporteffect",
"speed": 60.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "teleportmachine",
"speed": 60.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 14 ) ],
"loop": true,
"name": "teleportportal",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="obj_teleporter" type="Area2D" groups=["obj_teleporter"]]
collision_layer = 8
script = ExtResource( 20 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "teleportportal"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="TeleportEndTimer" type="Timer" parent="."]
wait_time = 0.167
one_shot = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 0.417
one_shot = true

[connection signal="timeout" from="TeleportEndTimer" to="." method="_on_TeleportEndTimer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="_on_TeleportTimer_timeout"]
